Fixing search result hover

--- a/UI/Web/src/theme/themes/dark.scss
+++ b/UI/Web/src/theme/themes/dark.scss
@@ -94,7 +94,7 @@
     --list-group-item-bg-color: #343a40;
     --list-group-item-border-color: rgba(239, 239, 239, 0.125);
     --list-group-hover-text-color: white;
-    --list-group-hover-bg-color: var(--accordion-body-bg-color);
+    --list-group-hover-bg-color: rgb(22, 27, 34);
     --list-group-active-border-color: none;
 
     /* Popover */
