--- a/UI/Web/src/theme/utilities/_global.scss
+++ b/UI/Web/src/theme/utilities/_global.scss
@@ -8,6 +8,7 @@ hr {
     background-color: var(--accent-bg-color) !important;
     color: var(--accent-text-color) !important;
     box-shadow: inset 0px 0px 8px 1px var(--accent-bg-color) !important;
+    font-size: var(--accent-text-size) !important;
 }
 
 .text-muted {
