--- a/UI/Web/src/app/book-reader/book-reader/book-reader.component.html
+++ b/UI/Web/src/app/book-reader/book-reader/book-reader.component.html
@@ -2,15 +2,19 @@
     <div class="fixed-top" #stickyTop>
         <a class="visually-hidden-focusable focus-visible" href="javascript:void(0);" (click)="moveFocus()">Skip to main content</a>
         <ng-container [ngTemplateOutlet]="actionBar"></ng-container>
-        <app-drawer #commentDrawer="drawer" [isOpen]="drawerOpen" [style.--drawer-width]="'300px'" [options]="{topOffset: topOffset}" [style.--drawer-background-color]="drawerBackgroundColor" (drawerClosed)="closeDrawer()">
-            <div header>
+        <app-drawer #commentDrawer="drawer" [(isOpen)]="drawerOpen" [options]="{topOffset: topOffset}" [style.--drawer-bg-color]="drawerBackgroundColor">
+        <!-- <app-drawer #commentDrawer="drawer" [isOpen]="drawerOpen" [style.--drawer-width]="'300px'" [options]="{topOffset: topOffset}" [style.--drawer-background-color]="drawerBackgroundColor" (drawerClosed)="closeDrawer()"> -->
+            <h5 header>
+                Book Settings
+            </h5>
+            <!-- <div header>
                 <h2 style="margin-top: 0.5rem">Book Settings
                     <button type="button" class="btn-close" aria-label="Close" (click)="commentDrawer.close()">
                         
                     </button>
                 </h2>
                 
-            </div>
+            </div> -->
             <div body class="drawer-body">
                 <div class="control-container">
                     <div class="controls">
