--- a/UI/Web/src/theme/components/_accordion.scss
+++ b/UI/Web/src/theme/components/_accordion.scss
@@ -1,26 +1,30 @@
 .accordion-header {
     font-weight: bold;
-    color: var(--accordion-header-text-color); 
+    color: var(--accordion-header-text-color);
 }
 
-.accordion-item { 
-    background-color: var(--accordion-body-bg-color); //$dark-card-color;
+.accordion-item {
+    background-color: var(--accordion-body-bg-color);
     color: var(--accordion-body-text-color);
     border-color: var(--accordion-body-border-color);
 
     div[role="tabpanel"] {
-      background-color: var(--accordion-header-bg-color); 
+      background-color: var(--accordion-header-bg-color);
+
+      .accordion-body {
+        background-color: var(--accordion-active-body-bg-color);
+      }
     }
 }
 
 .accordion-button {
     &:not(.collapsed) {
-        color: var(--accordion-header-text-color); 
+        color: var(--accordion-header-text-color);
         background-color: var(--accordion-body-bg-color);
     }
 
     &.collapsed {
-        color: var(--accordion-header-collapsed-text-color); 
+        color: var(--accordion-header-collapsed-text-color);
         background-color: var(--accordion-header-collapsed-bg-color);
     }
 
