--- a/UI/Web/src/theme/themes/e-ink.scss
+++ b/UI/Web/src/theme/themes/e-ink.scss
@@ -3,11 +3,11 @@
   --primary-color: black;
   --primary-color-dark-shade: #3B9E76;
   --error-color: #ff4136;
-  --bs-body-bg: #fff; 
+  --bs-body-bg: #fff;
   --body-text-color: black;
   --btn-icon-filter: invert(1) grayscale(100%) brightness(200%);
 
-  
+
   /* Navbar */
   --navbar-bg-color: black;
   --navbar-text-color: white;
@@ -20,6 +20,8 @@
   --input-bg-readonly-color: unset;
   --input-placeholder-color: #aeaeae;
   --input-border-color: #ccc;
+  --input-range-color: var(--primary-color);
+  --input-range-active-color: var(--primary-color-dark-shade);
 
   /* Buttons */
   --btn-primary-text-color: black;
@@ -49,7 +51,7 @@
   --nav-tab-text-color: var(--body-text-color);
   --nav-tab-bg-color: black;
   --nav-tab-hover-border-color: black;
-  
+
   /* Checkboxes */
   --checkbox-checked-bg-color: var(--primary-color);
   --checkbox-bg-color: white;
@@ -103,7 +105,7 @@
   --dropdown-item-hover-text-color: white;
   --dropdown-item-hover-bg-color: var(--primary-color);
   --dropdown-overlay-color: rgba(0,0,0,0.5);
-  
+
   /* Manga Reader */
   --manga-reader-overlay-filter: none;
   --manga-reader-overlay-bg-color: rgba(0,0,0,0.5);
@@ -111,7 +113,7 @@
   --manga-reader-bg-color: black;
   --manga-reader-next-highlight-bg-color: transparent;
   --manga-reader-prev-highlight-bg-color: transparent;
-  
+
   /* Radios */
   --radio-accent-color: var(--primary-color);
   --radio-hover-accent-color: var(--primary-color-dark-shade);
@@ -121,5 +123,7 @@
   --carousel-header-text-decoration: none;
   --carousel-hover-header-text-decoration: underline;
 
-
+  /* Drawer */
+  --drawer-bg-color: white;
+  --drawer-text-color: black;
 }
