--- a/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
@@ -154,8 +154,9 @@ $primary-color: #0062cc;
 }
 
 .reading-section {
-    max-height: 100vh;
-    width: 100%;
+    max-height: calc(100vh - 190px);
+    //width: 100%;
+    position: relative;
     //overflow: auto;  // This will break progress reporting
 }
 
@@ -215,11 +216,10 @@ $primary-color: #0062cc;
 // This class pushes the click area to the left a bit to let users click the scrollbar
 .right-with-scrollbar {
     position: fixed;
-    right: 17px;
+    right: 0px;
     top: 0px;
     width: 18%;
     height: 100%;
-    z-index: 2;
     cursor: pointer;
     opacity: 0;
     background: transparent;
@@ -231,7 +231,7 @@ $primary-color: #0062cc;
     top: 0px;
     width: 20%;
     height: 100%;
-    z-index: 2;
+    //z-index: 2;
     cursor: pointer;
     opacity: 0;
     background: transparent;
