--- a/UI/Web/src/app/shared/drawer/drawer.component.html
+++ b/UI/Web/src/app/shared/drawer/drawer.component.html
@@ -1,6 +1,6 @@
 <div
   class="drawer-container"
-  [ngStyle]="{'top': options.topOffset + 'px', 'padding-bottom': options.topOffset + 'px'}"
+  [ngStyle]="{'height': 'calc(100vh - '+ options.topOffset + 'px)', 'top': options.topOffset + 'px', 'padding-bottom': options.topOffset + 'px'}"
   [class.is-open]="isOpen"
   [class.position-right]="position === 'right'"
   [class.position-left]="position === 'left'"
