--- a/UI/Web/src/app/sidenav/side-nav-companion-bar/side-nav-companion-bar.component.html
+++ b/UI/Web/src/app/sidenav/side-nav-companion-bar/side-nav-companion-bar.component.html
@@ -1,13 +1,13 @@
 <div class="mt-0">
-    <div class="row g-0">
-        <div class="col mr-auto">
+    <div class="d-flex justify-content-between g-0">
+        <div class="">
             <ng-content select="[title]"></ng-content>
             <ng-content select="[subtitle]"></ng-content>
         </div>
-        <div class="col mr-auto d-none d-sm-flex hide-if-empty">
+        <div class="d-none d-sm-flex hide-if-empty">
             <ng-content select="[main]"></ng-content>
         </div>
-        <div class="col" *ngIf="hasFilter">
+        <div class="" *ngIf="hasFilter">
             <div class="row justify-content-end">
                 <div class="col-auto align-self-end">
                     <button *ngIf="hasFilter" class="btn btn-{{filterActive ? 'primary' : 'secondary'}} btn-small" (click)="toggleFilter()" [attr.aria-expanded]="filterOpen" placement="left" ngbTooltip="{{filterOpen ? 'Open' : 'Close'}} Filtering and Sorting" attr.aria-label="{{filterOpen ? 'Open' : 'Close'}} Filtering and Sorting">
