--- a/UI/Web/src/app/cards/card-item/card-item.component.html
+++ b/UI/Web/src/app/cards/card-item/card-item.component.html
@@ -1,14 +1,14 @@
 <div class="card {{selected ? 'selected-highlight' : ''}}">
     <div class="overlay" (click)="handleClick($event)">
       <ng-container *ngIf="total > 0 || supressArchiveWarning">
-        <app-image borderRadius=".25rem .25rem 0 0" height="230px" width="158px" [imageUrl]="imageUrl"></app-image>
+        <app-image borderRadius=".25rem" height="230px" width="158px" [imageUrl]="imageUrl"></app-image>
       </ng-container>
       <ng-container *ngIf="total === 0 && !supressArchiveWarning">
-        <app-image borderRadius=".25rem .25rem 0 0" height="230px" width="158px" [imageUrl]="imageService.errorImage"></app-image>
+        <app-image borderRadius=".25rem" height="230px" width="158px" [imageUrl]="imageService.errorImage"></app-image>
       </ng-container>
       
       <div class="progress-banner" *ngIf="read < total && total > 0 && read !== total">
-        <p><ngb-progressbar type="primary" height="5px" [value]="read" [max]="total"></ngb-progressbar></p>
+        <p><ngb-progressbar type="primary" height="4px" [value]="read" [max]="total"></ngb-progressbar></p>
 
         <span class="download" *ngIf="download$ | async as download">
           <app-circular-loader [currentValue]="download.progress"></app-circular-loader>
