--- a/UI/Web/src/theme/themes/dark.scss
+++ b/UI/Web/src/theme/themes/dark.scss
@@ -182,9 +182,9 @@
     --brand-font-family: "Spartan", sans-serif;
 
     /* Card */
-    --card-bg-color: rgba(22,27,34,0.5);
+    --card-bg-color: transparent;
     --card-text-color: var(--body-text-color);
-    --card-border-color: rgba(239, 239, 239, 0.125);
+    --card-border-color: transparent;
     --card-progress-bar-color: var(--primary-color);
     --card-overlay-bg-color: rgba(0, 0, 0, 0);
     --card-overlay-hover-bg-color: rgba(0, 0, 0, 0.2);
