--- a/UI/Web/src/app/shared/icon-and-title/icon-and-title.component.scss
+++ b/UI/Web/src/app/shared/icon-and-title/icon-and-title.component.scss
@@ -1,6 +1,9 @@
 .icon-and-title {
     flex-direction: column;
     min-width: 60px;
+    background-color: var(--side-nav-bg-color);
+    border-radius: 5px;
+    height: 100%;
 }
 
 .icon {
